# bb-portal

./: .bazelrc  .bazelrc.common  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: backend.yaml  master.yaml  publish-docker.yaml  pull-requests.yaml
cmd/bb_portal/: BUILD.bazel  grpcweb_proxy_server.go  main.go
config/: gh-actions.jmespath  portal.jsonnet
docs/: CI-integration.md
frontend/src/app/remote-execution-scheduler/: page.tsx
frontend/src/components/AppBar/: index.module.css  index.tsx
frontend/src/components/OperationDetails/: index.tsx
frontend/src/components/OperationStateDisplay/: index.tsx
frontend/src/components/PlatformQueuesTable/: Columns.tsx
frontend/src/components/WorkersTable/: index.tsx
frontend/src/utils/: bloomFilter.ts
internal/api/grpcweb/actioncacheproxy/: BUILD.bazel  server.go
internal/api/grpcweb/buildqueuestateproxy/: BUILD.bazel  server.go  server_test.go
internal/api/grpcweb/casproxy/: BUILD.bazel  server.go
internal/api/grpcweb/fsacproxy/: BUILD.bazel  server.go
internal/api/grpcweb/isccproxy/: BUILD.bazel  server.go
internal/api/servefiles/: BUILD.bazel  server.go
internal/database/buildeventrecorder/: save_structured_command_line.go
patches/com_buildbarn_bb_storage/: workflows_template.diff
patches/toolchains_llvm/: runtime_libs.diff
pkg/processing/: BUILD.bazel
pkg/proto/configuration/bb_portal/: bb_portal.pb.go  bb_portal.proto
pkg/summary/: summarizer.go
tools/: bazel-credential-helper.py
tools/github_workflows/: github_workflows.jsonnet
(+2 files in other folders)
