load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fsacproxy",
    srcs = ["server.go"],
    importpath = "github.com/buildbarn/bb-portal/internal/api/grpcweb/fsacproxy",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/fsac",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
